corrects UI issues with quiz answers on mobile

--- a/src/components/AnswerBtn/AnswerBtn.css
+++ b/src/components/AnswerBtn/AnswerBtn.css
@@ -24,8 +24,8 @@
 @media (max-width: 578px) {
   .answerBtn {
     margin: 6px 15px;
-    font-size: 17px;
-    height: 48px;
+    font-size: 16px;
+    height: 42px;
   }
 
 }
