--- a/src/components/NextQuestion/NextQuestion.css
+++ b/src/components/NextQuestion/NextQuestion.css
@@ -12,10 +12,12 @@
   font-size: 14px;
   line-height: 16px;
   color: #3C35B1;
+  background-color: #FFFFFF;
 }
 
-@media (max-width: 800px) {
+
+@media (max-width: 578px) {
   .next-question {
-    padding: 2rem;
+    padding: 1rem;
   }
 }
