--- a/src/pages/QuizPage/Quiz.css
+++ b/src/pages/QuizPage/Quiz.css
@@ -1,7 +1,7 @@
 .quiz {
   height: 100%;
   max-width: 1200px;
-  margin: 30px auto;
+  margin: 20px auto;
   padding: 0 2rem
 }
 .quiz h2 {
